crates/oxc_css_parser/tests/error/scss/at-rule/while/missing-condition.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: component value is expected
  ┌─ missing-condition.scss:1:8
  │
1 │ @while {}
  │        ^


